--- a/libs/shared/src/lib/components/article-metadata/article-metadata.component.scss
+++ b/libs/shared/src/lib/components/article-metadata/article-metadata.component.scss
@@ -15,9 +15,9 @@
   width: 100%;
   font-size: 0.8em;
 
-  @include media-breakpoint-down('xs'){
+  @include media-breakpoint-down('sm'){
     min-height: 1rem !important;
-
+    justify-content: space-around;
   }
 }
 
@@ -34,4 +34,9 @@
 
 .metadata-item {
   margin-right: 1.3rem;
+
+  @include media-breakpoint-down('sm'){
+  margin-right: 0.3rem !important;
+
+  }
 }
