minor fixes and testingss...

--- a/apps/havana500-webclient/src/app/features/home/dummy/impact-portal/impact-portal.component.scss
+++ b/apps/havana500-webclient/src/app/features/home/dummy/impact-portal/impact-portal.component.scss
@@ -22,8 +22,8 @@
 
 .image-container {
   position: relative;
-  background-image: url('../../../../../assets/images/article-header.png'),
-    linear-gradient(to bottom, #00000057, rgba(0, 0, 0, 0.32));
+  // background-image: url('../../../../../assets/images/article-header.png'),
+  //   linear-gradient(to bottom, #00000057, rgba(0, 0, 0, 0.32));
   height: auto;
   background-repeat: no-repeat;
   background-size: cover;
