--- a/libs/shared/src/lib/components/article-summary/article-summary.component.scss
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.scss
@@ -177,7 +177,7 @@ $article-summary-bColor: #ffffff;
 }
 
 .article-summary-img-container {
-  position: relative;
+  // position: relative;
   height: 0 !important;
   .article-image {
     width: 100%;
