Make the bc of the toolbar to white and the color black

--- a/apps/havana500-webclient/src/app/features/layout/layout.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/layout.component.html
@@ -1,6 +1,6 @@
 <div class=" main-container" fxLayout="column">
-  <mat-toolbar class="toolbar mat-elevation-z1 mat-accent-500-bg">
-    <hav-toolbar fxFlexFill></hav-toolbar>
+  <mat-toolbar id="main-toolbar" class="toolbar mat-elevation-z1 mat-accent-500-bg">
+    <hav-toolbar  fxFlexFill></hav-toolbar>
   </mat-toolbar>
 
   <div fxLayout="column" class="main-content container__overflowed">
