--- a/apps/havana500-webclient/src/app/features/layout/layout.component.scss
+++ b/apps/havana500-webclient/src/app/features/layout/layout.component.scss
@@ -23,3 +23,8 @@ body {
 .main-footer {
   min-height: 64px;
 }
+
+#main-toolbar{
+  color: black !important;
+  background-color: white !important;
+}
