--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-curiosities/outstanding-curiosities.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-curiosities/outstanding-curiosities.component.html
@@ -30,12 +30,13 @@
       <mat-icon [svgIcon]="'arrow'"></mat-icon>
     </button>
   -->
-
+  <div class="more-elements-btn-container">
   <a
     translate
-    class="see-more-section"
+    class="see-more-section btn"
     [routerLink]="'/section/curiosidades'"
     fxFlexAlign="center"
     >SEE_MORE</a
   >
+</div>
 </div>
