--- a/libs/shared/src/lib/components/outstanding-experiences/outstanding-experiences.component.html
+++ b/libs/shared/src/lib/components/outstanding-experiences/outstanding-experiences.component.html
@@ -24,12 +24,15 @@
     ></ant-experience-article-card>
   </div>
 
+  <div class="more-elements-btn-container">
+
   <a
     *ngIf="isViewMoreVisible"
     translate
-    class="see-more-section"
+    class="see-more-section btn"
     [routerLink]="'/section/experiencias'"
     fxFlexAlign="center"
     >SEE_MORE</a
   >
+  </div>
 </div>
