--- a/libs/shared/src/lib/scss/ant.scss
+++ b/libs/shared/src/lib/scss/ant.scss
@@ -1,7 +1,10 @@
 // Mixins
 @import 'mixins/breakpoints';
+@import "~bootstrap/dist/css/bootstrap.css";
+
 $article-tag-bColor: #32A9E1;
 
+$more-elemtents-container-color: #2aaae2;
 
 .article-tag {
     background-color: $article-tag-bColor;
@@ -19,5 +22,22 @@ $article-tag-bColor: #32A9E1;
       float: left;
       margin-right: 4px;
       margin-top: 2px;
+    }
+  }
+
+  .more-elements-btn-container {
+    position: relative;
+    width: 100%;
+    min-width: 100%;
+    margin-top: 1%;
+    margin-bottom: 3%;
+    button,a  {
+      background-color: $more-elemtents-container-color;
+      margin-left: 48%;
+      margin-right: 50%;
+      color: white;
+      font-weight: 700;
+      font-size: 2em;
+      text-transform: uppercase;
     }
   }
