Improve the styles of the more items btn

--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-curiosities/outstanding-curiosities.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-curiosities/outstanding-curiosities.component.html
@@ -33,7 +33,7 @@
   <div class="more-elements-btn-container">
   <a
     translate
-    class="see-more-section btn"
+    class="btn"
     [routerLink]="'/section/curiosidades'"
     fxFlexAlign="center"
     >SEE_MORE</a
