--- a/libs/shared/src/lib/components/outstanding-experiences/outstanding-experiences.component.html
+++ b/libs/shared/src/lib/components/outstanding-experiences/outstanding-experiences.component.html
@@ -29,7 +29,7 @@
   <a
     *ngIf="isViewMoreVisible"
     translate
-    class="see-more-section btn"
+    class="btn"
     [routerLink]="'/section/experiencias'"
     fxFlexAlign="center"
     >SEE_MORE</a
