Remove the hours and the alt of the countdown in the home

--- a/libs/shared/src/lib/components/countdown/countdown.component.html
+++ b/libs/shared/src/lib/components/countdown/countdown.component.html
@@ -1,27 +1,22 @@
 <div class="ant-countdown">
   <div class="time days">
     <div class="value">{{ countdown.days }}</div>
-    <div translate class="title">days</div>
+    <!-- <div translate class="title">days</div> -->
   </div>
 
   <mat-divider vertical class="countdown-divider"> </mat-divider>
 
   <div class="time hours">
     <div class="value">{{ countdown.hours }}</div>
-    <div translate class="title">hours</div>
+    <!-- <div translate class="title">hours</div> -->
   </div>
 
   <mat-divider vertical class="countdown-divider"> </mat-divider>
 
   <div class="time minutes">
     <div class="value">{{ countdown.minutes }}</div>
-    <div translate class="title">minutes</div>
+    <!-- <div translate class="title">minutes</div> -->
   </div>
 
   <mat-divider vertical class="countdown-divider"> </mat-divider>
-
-  <div class="time seconds">
-    <div class="value">{{ countdown.seconds }}</div>
-    <div translate class="title">seconds</div>
-  </div>
 </div>
