--- a/libs/shared/src/lib/components/article-summary/article-summary.component.scss
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.scss
@@ -177,15 +177,16 @@ $article-summary-bColor: #ffffff;
 }
 
 .article-summary-img-container {
-  // position: relative;
-  height: 0 !important;
+  position: relative;
+  // height: 0 !important;
   .article-image {
     width: 100%;
-    max-height: inherit !important;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
+    height: auto;
+    // max-height: inherit !important;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // display: block;
   }
 }
 
@@ -236,25 +237,25 @@ $article-summary-bColor: #ffffff;
   flex-direction: row;
 
   .article-summary-img-outer-container {
-    width: 48.5%;
+    // width: 48.5%;
 
     .article-summary-img-container {
       -webkit-box-flex: 1;
       -ms-flex-positive: 1;
       width: 100%;
       position: relative;
-      height: 0 !important;
+      height: auto !important;
       max-height: 530px;
-      padding-top: 56.25%;
+      // padding-top: 56.25%;
 
-      .article-image {
-        height: auto;
-        width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        max-height: 450px !important;
-      }
+      // .article-image {
+      //   height: auto;
+      //   width: 100%;
+      //   position: absolute;
+      //   top: 0;
+      //   left: 0;
+      //   max-height: 450px !important;
+      // }
     }
   }
 
