Change the text `QUE HACER` with `ANDAR LA HAVANA`

--- a/libs/shared/src/lib/components/outstanding-experiences/outstanding-experiences.component.html
+++ b/libs/shared/src/lib/components/outstanding-experiences/outstanding-experiences.component.html
@@ -14,8 +14,8 @@
       fxLayout="column"
       fxLayoutAlign="center center"
     >
-      <h1 translate class="experiences-poster-title section-name">WHAT</h1>
-      <h1 translate class="experiences-poster-title section-name">TODO</h1>
+      <h1 translate class="experiences-poster-title section-name">WALK</h1>
+      <h1 translate class="experiences-poster-title section-name">HAVANA</h1>
     </div>
     <ant-experience-article-card
       [articles$]="experiences$"
