--- a/libs/shared/src/lib/components/outstanding-experiences/outstanding-experiences.component.scss
+++ b/libs/shared/src/lib/components/outstanding-experiences/outstanding-experiences.component.scss
@@ -45,7 +45,7 @@
 
 .experiences-poster-title {
   color: white !important;
-  text-align: left;
+  text-align: center;
   min-width: 60%;
   @include media-breakpoint('xs') {
     padding: 0 1rem;
