Show the metadata of the most important articles

--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.html
@@ -19,9 +19,9 @@
         fxFlexFill
         [isTopArticle]="!isMobile()"
         [article]="article"
-        [isMetadataVisible]="false"
-        [isCardShadowMode]="false"
-        [isCreationDateVisible]="false"
+        [isMetadataVisible]="true"
+        [isCardShadowMode]="true"
+        [isCreationDateVisible]="true"
       ></ant-article-summary>
     </div>
   </div>
