Add the date selector in the 2nd level

--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
@@ -138,13 +138,13 @@ $tags-container-color: #2aaae2;
   background-color: #fff !important;
   width: fit-content;
   max-width: 90%;
+  min-width: 30%;
 
   padding-bottom: 0 !important;
-  min-height: auto !important;
   margin: auto !important;
 
   .ng-select-container {
-    min-height: auto !important;
+  min-height: 30px !important;
   }
 
   .ng-arrow-wrapper {
