Finish with the filtering in the 2nd level

--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.html
@@ -27,16 +27,17 @@
   <div id="tags-container" [innerHtml]="tagsData"></div>
 
   <article fxFlexFill>
+      <div *ngIf="!atLeastOneArticle">
+          <h1 class="no-articles-message" translate>NO_ITEMS</h1>
+        </div>
     <!-- MAIN ARTICLE -->
     <div *ngIf="!activeFilter">
-      <section class="main-article-summary-container" *ngIf="mostImportantArticle; else: noItemsTemplate">
+      <section class="main-article-summary-container" *ngIf="mostImportantArticle">
         <ant-article-summary [isCuriosityHomeArticle]="!isMobile()" [article]="mostImportantArticle" [isCardShadowMode]="false"></ant-article-summary>
       </section>
       <!-- / MAIN ARTICLE -->
 
-      <ng-template #noItemsTemplate>
-        <h1 class="no-articles-message" translate>NO_ITEMS</h1>
-      </ng-template>
+     
 
       <!-- MARKETING -->
       <section id="marketing-container" class="col-12" *ngIf="marketingImages && marketingImages.length > 0">
