--- a/libs/shared/src/lib/components/article-summary/article-summary.component.scss
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.scss
@@ -134,10 +134,16 @@ $article-summary-bColor: #ffffff;
   // text-align: center;
   // text-align-last: center;
   font-weight: 700;
-  padding-top: 1rem;
+  /* padding-top: 1rem; */
   font-size: 2.85em;
   text-transform: uppercase;
   width: 100%;
+  word-break: break-all;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1em;
+  max-height: 2em;
+  display: block;
   word-break: break-all;
 
   @include media-breakpoint-down('sm') {
