Rendering the body as innerHTML for the article's summaries

--- a/libs/shared/src/lib/components/article-summary/article-summary.component.html
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.html
@@ -40,8 +40,8 @@
         </h5>
       </div>
 
-      <p *ngIf="isTextVisible" class="article-summary-body">
-        {{ article?.body }}
+        
+      <p *ngIf="isTextVisible" class="article-summary-body" [innerHtml]="article.body">
       </p>
     </div>
 
