Improve style for the articles summaries

--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
@@ -120,8 +120,18 @@ $tags-container-color: #2aaae2;
   ant-article-summary {
     margin-bottom: 15px !important; 
     .article-summary-body{
-      max-height: 200px !important;
+      min-height: 10em !important;
+      max-height: 10em !important;
       overflow: hidden;
+      line-height: 1em;
+      text-overflow: ellipsis;
+      word-break: break-word;
+      display: block;
+
+      p {
+        margin-bottom: .1em !important;
+        text-align: justify;
+      }
     }
   }
 }
