Improve styles for the big article summaries

--- a/libs/shared/src/lib/components/experience-article-card/experience-article-card.component.scss
+++ b/libs/shared/src/lib/components/experience-article-card/experience-article-card.component.scss
@@ -36,3 +36,18 @@
     padding: 0 3rem !important;
   }
 }
+
+.article-summary-body{
+  min-height: 22em !important;
+  max-height: 22em !important;
+  overflow: hidden;
+  line-height: 1em;
+  text-overflow: ellipsis;
+  word-break: break-word;
+  display: block;
+
+  p {
+    margin-bottom: .03em !important;
+    text-align: justify;
+  }
+}
